# Intersections

./: CMakeLists.txt  main.cpp
blender/: intersection.blend
